[package]
name = "leucite"
version = "0.1.0"
edition = "2021"
description = "A wrapper crate around rust-landlock that provides useful abstractions and utilities"
keywords = ["sandbox", "landlock"]
repository = "https://github.com/basalt-rs/leucite"
authors = ["funnyboy-roks <funnyboyroks@gmail.com>"]
license = "Apache-2.0"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
anyhow = "1.0.94"
landlock = "0.4.1"
tokio = { version = "1.42.0", features = ["process", "fs"], optional = true }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tmpdir = "1.0.0"
leucite = { path = ".", features = ["tokio"] }
tempdir = "0.3.7"
