[package]
name = "leucite"
version = "1.0.0"
edition = "2021"
description = "A library for sandboxing and limiting command execution"
keywords = ["sandbox", "landlock", "prlimit", "command", "linux"]
repository = "https://github.com/basalt-rs/leucite"
authors = ["funnyboy-roks <funnyboyroks@gmail.com>"]
license = "Apache-2.0"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
landlock = "0.4.1"
libc = "0.2.169"
thiserror = "2.0.12"
tokio = { version = "1.42.0", features = ["process", "fs"], optional = true }
deprecate-until = "0.1.1"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tmpdir = "1.0.0"
leucite = { path = ".", features = ["tokio"] }
tempdir = "0.3.7"
